Added pgl functions
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/genlambdadist@3 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,1 +1,5 @@
 exportPattern("^[[:alpha:]]+")
+useDynLib(GeneralizedLambda,
+          gl_fmkl_distfunc,
+          gl_rs_distfunc,
+          gl_fm5_distfunc)
