Made working version of package except for dgl
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/genlambdadist@6 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,4 +1,17 @@
+################################################
+## Functions
+################################################
 exportPattern("^[[:alpha:]]+")
+exportPattern("gl")
+
+################################################
+## S3 classes
+################################################
+
+################################################
+## useDynLib
+################################################
+
 useDynLib(GeneralizedLambda,
           gl_fmkl_distfunc,
           gl_rs_distfunc,
