Finished basic functions. Only 2 NOTEs when check as-cran
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/genlambdadist@8 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -7,9 +7,9 @@ Author: Jeong Kim <jkim831@aucklanduni.ac.nz>
 Maintainer: David Scott <d.scott@auckland.ac.nz>
 Depends: R (>= 3.0.0)
 Encoding: latin1
-Description: This package provides functions for multiple versions
-	     (commonly wrongly called parameterisations) of the generalized
-	     lambda distribution. Functions are provided (or will be) for the
+Description: An implementation of a number of versions (commonly wrongly
+             called parameterisations) of the generalized lambda distribution.
+	     Functions are provided (or will be) for the
 	     density function, distribution function, quantile function and
 	     for random number generation. Code has been drawn from a number
 	     of existing packages and reformatted to agree with the style of
