Added inversion tests. Only for FMKL initially.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/genlambdadist@9 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -15,4 +15,5 @@ exportPattern("gl")
 useDynLib(GeneralizedLambda,
           gl_fmkl_distfunc,
           gl_rs_distfunc,
-          gl_fm5_distfunc)
+          gl_fm5_distfunc,
+          gl_vsk_distfunc)
